feat(auth): implement authentication and tenant isolation
- Add Google OAuth SSO with state/nonce/user-agent binding
- Add invite-only access with one pending invite per email
- Add stateless JWT sessions in HTTP-only cookies with key rotation
- Add role-based authorization (manager, intake, specialist)
- Add strict tenant isolation via organization scoping

New files:
- core/security.py, core/deps.py: JWT and auth dependencies
- db/enums.py, db/models.py: Auth and tenant models
- schemas/auth.py, user.py, org.py, invite.py: Pydantic DTOs
- services/auth_service.py, user_service.py, org_service.py: Service layer
- services/google_oauth.py: OIDC verification with google-auth
- routers/auth.py: OAuth flow, /me, /logout
- routers/dev.py: /seed, /login-as for testing
- cli.py: Bootstrap commands (create-org, revoke-sessions)
- alembic/versions/0001_baseline.py: Fresh baseline migration

Also: Remove __pycache__ from git tracking, add cookies.txt to .gitignore

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,14 +1,53 @@
-# Database connection
+# =============================================================================
+# Environment
+# =============================================================================
+ENV=dev
+
+# =============================================================================
+# Database
+# =============================================================================
 DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
 
-# JWT Authentication (coming soon)
-# JWT_SECRET=your-secret-key-here
-# JWT_EXPIRES_MIN=60
+# =============================================================================
+# Session Token (JWT in HTTP-only cookie)
+# =============================================================================
+# Current signing key (min 32 chars in production)
+JWT_SECRET=change-this-in-production-minimum-32-characters
 
+# Previous key for rotation (set during rotation, clear after)
+JWT_SECRET_PREVIOUS=
+
+# Token expiry in hours
+JWT_EXPIRES_HOURS=4
+
+# =============================================================================
+# Google OAuth
+# =============================================================================
+# Create credentials at: https://console.cloud.google.com/apis/credentials
+GOOGLE_CLIENT_ID=your-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
+
+# =============================================================================
+# Domain Restriction (optional)
+# =============================================================================
+# Comma-separated list of allowed email domains
+# Leave empty to allow all domains
+ALLOWED_EMAIL_DOMAINS=
+
+# =============================================================================
 # CORS
-# CORS_ORIGINS=http://localhost:3000
+# =============================================================================
+# Comma-separated allowed origins
+CORS_ORIGINS=http://localhost:3000
 
-# Meta Lead Ads (coming soon)
-# META_APP_SECRET=
-# META_VERIFY_TOKEN=
-# META_PAGE_ACCESS_TOKEN=
+# =============================================================================
+# Frontend
+# =============================================================================
+# Used for safe post-login redirects
+FRONTEND_URL=http://localhost:3000
+
+# =============================================================================
+# Dev-Only (required for /dev/* endpoints)
+# =============================================================================
+DEV_SECRET=local-dev-secret-change-me
