--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -24,3 +24,10 @@ uvicorn==0.38.0
 uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
+
+# Auth dependencies
+httpx>=0.27.0
+pyjwt>=2.8.0
+google-auth>=2.29.0
+requests>=2.31.0
+email-validator>=2.0.0
