feat: Add Meta Lead Ads integration for webhook processing, secure lead fetching, and auto-conversion to cases.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -51,3 +51,26 @@ FRONTEND_URL=http://localhost:3000
 # Dev-Only (required for /dev/* endpoints)
 # =============================================================================
 DEV_SECRET=local-dev-secret-change-me
+
+# =============================================================================
+# Meta Lead Ads Integration
+# =============================================================================
+# Create app at: https://developers.facebook.com/apps/
+META_APP_ID=
+META_APP_SECRET=
+
+# Random token you create for webhook verification
+META_VERIFY_TOKEN=your-random-verify-token
+
+# Set to false in production to require signature verification
+META_TEST_MODE=true
+
+# Graph API version (update periodically)
+META_API_VERSION=v21.0
+
+# Encryption key for page access tokens (REQUIRED if using Meta integration)
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+META_ENCRYPTION_KEY=
+
+# Webhook payload size limit in bytes
+META_WEBHOOK_MAX_PAYLOAD_BYTES=100000
