feat(meta): Add Conversions API for lead quality signals
- Add meta_capi.py service for sending conversion events to Meta
- Hook into case_service.change_status() for qualified transitions
- Configurable: META_PIXEL_ID, META_CAPI_ENABLED
- Improves ROAS by training Meta on high-quality leads

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -74,3 +74,15 @@ META_ENCRYPTION_KEY=
 
 # Webhook payload size limit in bytes
 META_WEBHOOK_MAX_PAYLOAD_BYTES=100000
+
+# =============================================================================
+# Meta Conversions API (CAPI) - Send lead quality signals back to Meta
+# =============================================================================
+# When a Meta lead becomes "qualified", we notify Meta to optimize ad targeting
+# This improves your Return on Ad Spend (ROAS) over time
+
+# Dataset/Pixel ID from Meta Events Manager
+META_PIXEL_ID=
+
+# Set to true to enable sending conversion events to Meta
+META_CAPI_ENABLED=false
