feat: Add qualified/applied statuses + fix CAPI implementation
Statuses:
- Added 'qualified' status (intake confirms applicant is qualified)
- Added 'applied' status (applicant submitted full application)
- New flow: contacted → qualified → applied → under_review → approved

CAPI Fixes (per team feedback):
- CAPI now fires BEFORE auto-transition (captures 'approved' correctly)
- Added hashed email/phone for better Meta user matching
- Added event_id for deduplication
- Proper logging of CAPI success/failure
- Added META_CAPI_ACCESS_TOKEN for dedicated CAPI auth

Frontend:
- Updated STATUS_CONFIG with new statuses
- Updated INTAKE_VISIBLE_STATUSES

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -86,3 +86,7 @@ META_PIXEL_ID=
 
 # Set to true to enable sending conversion events to Meta
 META_CAPI_ENABLED=false
+
+# Optional: System user access token for CAPI (if not set, falls back to page token)
+# Recommended: Create a System User in Meta Business Manager for dedicated CAPI access
+META_CAPI_ACCESS_TOKEN=
