feat(week10): Add scheduled token-check endpoint
- POST /internal/scheduled/token-check
- Protected by X-Internal-Secret header
- Sweeps MetaPageMapping for expiring/expired tokens
- Creates META_TOKEN_EXPIRING and META_TOKEN_EXPIRED alerts
- Updates integration health config_status

Config: added INTERNAL_SECRET to settings and .env.example

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -90,3 +90,10 @@ META_CAPI_ENABLED=false
 # Optional: System user access token for CAPI (if not set, falls back to page token)
 # Recommended: Create a System User in Meta Business Manager for dedicated CAPI access
 META_CAPI_ACCESS_TOKEN=
+
+# =============================================================================
+# INTERNAL ENDPOINTS (Scheduled/Cron jobs)
+# =============================================================================
+# Secret for authenticating calls to /internal/scheduled/* endpoints
+# Generate with: openssl rand -hex 32
+INTERNAL_SECRET=
