--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -42,11 +42,14 @@
     "@tiptap/extension-placeholder": "^3.13.0",
     "@tiptap/react": "^3.13.0",
     "@tiptap/starter-kit": "^3.13.0",
+    "@types/d3-scale": "^4.0.9",
+    "@types/react-simple-maps": "^3.0.6",
     "@vercel/analytics": "1.6.1",
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.1.1",
+    "d3-scale": "^4.0.2",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
@@ -58,6 +61,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
