fix: Meta Ads Spend integration improvements
- Added META_AD_ACCOUNT_ID and META_SYSTEM_TOKEN to Settings class
- Changed META_TEST_MODE default to False (safer for production)
- Added logging for API errors and config warnings
- Added safe_float/safe_int for robust numeric parsing
- Checks multiple action types: lead, leadgen, pixel conversions
- Added pagination (up to 10 pages / 1000 campaigns)
- Updated .env.example with new settings

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -62,8 +62,8 @@ META_APP_SECRET=
 # Random token you create for webhook verification
 META_VERIFY_TOKEN=your-random-verify-token
 
-# Set to false in production to require signature verification
-META_TEST_MODE=true
+# Set to true only for local testing (uses mock data)
+META_TEST_MODE=false
 
 # Graph API version (update periodically)
 META_API_VERSION=v21.0
@@ -74,6 +74,16 @@ META_ENCRYPTION_KEY=
 
 # Webhook payload size limit in bytes
 META_WEBHOOK_MAX_PAYLOAD_BYTES=100000
+
+# =============================================================================
+# Meta Ads Insights (Spend/Budget data)
+# =============================================================================
+# Ad Account ID from Meta Ads Manager (format: act_XXXXXX)
+META_AD_ACCOUNT_ID=
+
+# System user access token with ads_read permission
+# Create a System User in Meta Business Manager with ads_read permission
+META_SYSTEM_TOKEN=
 
 # =============================================================================
 # Meta Conversions API (CAPI) - Send lead quality signals back to Meta
