feat: Production deployment preparation
- Added Sentry integration for error tracking (optional, ENV-aware)
- Added slowapi rate limiting (5/min auth, 100/min webhooks, 60/min API)
- Tightened CORS (specific methods and headers)
- Created production Dockerfile (multi-stage, non-root user, health check)
- Added placeholder indexes migration (indexes already exist in models)
- Updated requirements.txt, config.py, .env.example
- Bumped app version to 0.5.0

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -107,3 +107,19 @@ META_CAPI_ACCESS_TOKEN=
 # Secret for authenticating calls to /internal/scheduled/* endpoints
 # Generate with: openssl rand -hex 32
 INTERNAL_SECRET=
+
+# =============================================================================
+# ERROR TRACKING (Optional)
+# =============================================================================
+# Sentry DSN for error tracking in production
+# Get from: https://sentry.io -> Project Settings -> Client Keys (DSN)
+# Only initializes when ENV != "dev"
+SENTRY_DSN=
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+# Requests per minute per IP (defaults shown)
+# RATE_LIMIT_AUTH=5       # Login attempts
+# RATE_LIMIT_WEBHOOK=100  # Meta webhooks  
+# RATE_LIMIT_API=60       # General API
