--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -40,3 +40,9 @@ resend>=2.0.0
 
 # Encryption (for Meta page tokens)
 cryptography>=43.0.0
+
+# Rate limiting
+slowapi>=0.1.9
+
+# Error tracking (optional)
+sentry-sdk[fastapi]>=1.40.0
