chore: Update web development dependencies and refine API test environment variable configuration.

--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -2,9 +2,10 @@
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 env =
-    DEV_BYPASS_AUTH=False
-    ENV=test
-    DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
+    D:DEV_BYPASS_AUTH=False
+    D:ENV=test
+    # Default only; CI supplies its own DATABASE_URL (e.g. crm_test)
+    D:DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
 testpaths = tests
 python_files = test_*.py
 python_functions = test_*
