--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -51,6 +51,7 @@ FRONTEND_URL=http://localhost:3000
 # Dev-Only (required for /dev/* endpoints)
 # =============================================================================
 DEV_SECRET=local-dev-secret-change-me
+DEV_BYPASS_AUTH=false
 
 # =============================================================================
 # Meta Lead Ads Integration
