--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -25,6 +25,9 @@ uvloop==0.22.1
 watchfiles==1.1.1
 websockets==15.0.1
 
+# Required for UploadFile/Form parsing (FastAPI will error at import-time without it)
+python-multipart>=0.0.20
+
 # Auth dependencies
 httpx>=0.27.0
 pyjwt>=2.8.0
