--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -4,6 +4,9 @@ asyncio_default_fixture_loop_scope = function
 env =
     D:DEV_BYPASS_AUTH=False
     D:ENV=test
+    # Fernet keys for version snapshot encryption in tests
+    D:VERSION_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
+    D:META_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
     # Default only; CI supplies its own DATABASE_URL (e.g. crm_test)
     D:DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
 testpaths = tests
