feat: Add Zoom meeting integration, including a new date-time picker component and refined timezone handling for meeting creation.

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -29,6 +29,27 @@ GOOGLE_CLIENT_SECRET=your-client-secret
 GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 
 # =============================================================================
+# Encryption Keys (REQUIRED)
+# =============================================================================
+# Used for encrypting OAuth tokens + AI keys at rest
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+FERNET_KEY=
+
+# Used for encrypting version snapshots (pipelines/templates/settings/etc)
+# If empty, the app falls back to META_ENCRYPTION_KEY.
+VERSION_ENCRYPTION_KEY=
+
+# =============================================================================
+# Per-User OAuth Integrations
+# =============================================================================
+ZOOM_CLIENT_ID=
+ZOOM_CLIENT_SECRET=
+ZOOM_REDIRECT_URI=http://localhost:8000/integrations/zoom/callback
+
+# Gmail integration OAuth (separate from Google Login OAuth)
+GMAIL_REDIRECT_URI=http://localhost:8000/integrations/gmail/callback
+
+# =============================================================================
 # Domain Restriction (optional)
 # =============================================================================
 # Comma-separated list of allowed email domains
