--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "eslint .",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
@@ -72,6 +73,7 @@
     "zod": "4.1.13"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
