fix: Critical bug fixes and improvements
Performance:
- Fixed N+1 query in case list by adding owner relationships to Case model
- Updated _case_to_list_item to use preloaded owner_user/owner_queue

Features:
- Wired up date range filter (backend + frontend)
- Added created_from/created_to params to case list API
- Date picker now filters cases properly

Scalability:
- Added Redis support for rate limiting (multi-worker compatible)
- Falls back to in-memory if Redis unavailable
- Added redis>=5.0.0 to requirements.txt

Worker:
- Implemented REMINDER job handler (creates notifications + sends emails)
- Implemented NOTIFICATION job handler (creates in-app notifications)
- Removed TODO placeholders

Config:
- Fixed Turbopack workspace warning (set turbopack.root)
- Added .agent/agents.md with zero-tolerance rule for warnings/bugs

Tests: 25/26 passing (1 pre-existing FOR UPDATE issue)
Frontend build: passing

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -52,3 +52,6 @@ sentry-sdk[fastapi]>=1.40.0
 
 # Timezone support
 pytz>=2024.1
+
+# Rate limiting (distributed storage for multi-worker setups)
+redis>=5.0.0
