config: Add email provider (Resend) configuration
Added to apps/api/.env.example:
- RESEND_API_KEY for email sending
- REDIS_URL for distributed rate limiting

Updated README.md:
- Added Resend API key to environment variables section
- Documented Redis configuration

Email sending will run in dry-run mode without RESEND_API_KEY.
Phase 2A Email Provider Config: Complete ✅

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -145,3 +145,19 @@ SENTRY_DSN=
 # RATE_LIMIT_AUTH=5       # Login attempts
 # RATE_LIMIT_WEBHOOK=100  # Meta webhooks  
 # RATE_LIMIT_API=60       # General API
+
+# =============================================================================
+# EMAIL PROVIDER (Resend)
+# =============================================================================
+# Get your API key from: https://resend.com/api-keys
+# Required for sending emails (templates, notifications, etc.)
+# Without this key, email jobs will run in "dry run" mode (logged but not sent)
+RESEND_API_KEY=
+
+# =============================================================================
+# REDIS (Optional)
+# =============================================================================
+# Redis URL for distributed rate limiting across multiple workers
+# If not set, falls back to in-memory rate limiting (single worker only)
+# Format: redis://localhost:6379/0
+REDIS_URL=
