fix(tests): Fix compliance test ordering issue
The export job creation logs an audit entry, causing ordering issues
when the test audit log has the same timestamp.

Fixed by creating test audit logs 5 seconds earlier to ensure they
appear first in the export output.

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -55,3 +55,6 @@ pytz>=2024.1
 
 # Rate limiting (distributed storage for multi-worker setups)
 redis>=5.0.0
+
+# Export storage (S3)
+boto3>=1.34.0
