--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,11 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@fullcalendar/core": "^6.1.19",
+    "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
+    "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "1.2.12",
     "@radix-ui/react-alert-dialog": "1.1.15",
@@ -62,6 +67,7 @@
     "react": "19.2.3",
     "react-day-picker": "9.12.0",
     "react-dom": "19.2.3",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.68.0",
     "react-resizable-panels": "^3.0.6",
     "react-simple-maps": "^3.0.0",
