--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -62,7 +62,7 @@
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "lucide-react": "^0.561.0",
-    "next": "16.0.10",
+    "next": "16.1.0",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-day-picker": "9.12.0",
@@ -79,13 +79,13 @@
     "zod": "4.1.13"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^16.1.0",
+    "@next/bundle-analyzer": "16.1.0",
     "@tailwindcss/postcss": "^4.1.18",
     "@testing-library/jest-dom": "^6.6.0",
     "@testing-library/react": "^16.0.0",
     "@types/node": "^25.0.2",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "jsdom": "^27.3.0",
     "postcss": "^8.5.6",
@@ -93,5 +93,11 @@
     "tw-animate-css": "1.4.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.16"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
   }
 }
