chore: add typecheck script and update CI
- Added pnpm run typecheck (tsc --noEmit) for faster type checking
- Added pnpm run check (typecheck + lint + test) for comprehensive validation
- Updated CI to run typecheck separately before build for clearer errors

This ensures type errors are caught before merge.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,10 @@ jobs:
       
       - name: Run type check
         working-directory: apps/web
+        run: pnpm run typecheck
+      
+      - name: Run build
+        working-directory: apps/web
         run: pnpm run build
       
       - name: Run tests
@@ -118,8 +122,8 @@ jobs:
         with:
           node-version: '24'
       
-      - name: Install and check TypeScript
+      - name: TypeScript check
         working-directory: apps/web
         run: |
           pnpm install
-          pnpm run build
+          pnpm run typecheck
