--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -62,3 +62,7 @@ boto3>=1.34.0
 # Image processing (EXIF stripping)
 pillow>=10.0.0
 reportlab>=4.4.0
+
+# MFA/TOTP support
+pyotp>=2.9.0
+duo_universal>=2.2.0
