--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -34,9 +34,10 @@
     "cmdk": "1.1.1",
     "d3-scale": "^4.0.2",
     "date-fns": "4.1.0",
+    "dompurify": "^3.3.1",
     "embla-carousel-react": "8.6.0",
-    "input-otp": "1.4.2",
     "html-to-image": "^1.11.13",
+    "input-otp": "1.4.2",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.561.0",
     "next": "16.1.0",
