--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:all": "pnpm run test && pnpm run test:integration",
     "check": "pnpm run typecheck && pnpm run lint && pnpm run test",
     "analyze": "next experimental-analyze"
   },
@@ -69,6 +71,7 @@
     "eslint": "^9.39.2",
     "eslint-plugin-unused-imports": "^4.3.0",
     "jsdom": "^27.4.0",
+    "msw": "^2.12.7",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "1.4.0",
