--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -5,12 +5,10 @@ anyio==4.12.0
 click==8.3.1
 fastapi==0.124.4
 h11==0.16.0
-httptools==0.7.1
 idna==3.11
 mako==1.3.10
 markupsafe==3.0.3
-psycopg==3.3.2
-psycopg-binary==3.3.2
+psycopg[binary]==3.3.2
 pydantic==2.12.5
 pydantic-core==2.41.5
 pydantic-settings==2.12.0
@@ -20,49 +18,46 @@ sqlalchemy==2.0.45
 starlette==0.50.0
 typing-extensions==4.15.0
 typing-inspection==0.4.2
-uvicorn==0.38.0
-uvloop==0.22.1
-watchfiles==1.1.1
-websockets==15.0.1
+uvicorn[standard]==0.38.0
 
 # Required for UploadFile/Form parsing (FastAPI will error at import-time without it)
-python-multipart>=0.0.20
+python-multipart==0.0.20
 
 # Auth dependencies
-httpx>=0.27.0
-pyjwt>=2.8.0
-google-auth>=2.29.0
-requests>=2.31.0
-email-validator>=2.0.0
+httpx==0.27.0
+pyjwt==2.8.0
+google-auth==2.29.0
+requests==2.31.0
+email-validator==2.0.0
 
 # Security
-nh3>=0.2.0
+nh3==0.2.0
 
 # Email
-resend>=2.0.0
+resend==2.0.0
 
 # Encryption (for Meta page tokens)
-cryptography>=43.0.0
+cryptography==43.0.0
 
 # Rate limiting
-slowapi>=0.1.9
+slowapi==0.1.9
 
 # Error tracking (optional)
-sentry-sdk[fastapi]>=1.40.0
+sentry-sdk[fastapi]==1.40.0
 
 # Timezone support
-pytz>=2024.1
+pytz==2024.1
 
 # Rate limiting (distributed storage for multi-worker setups)
-redis>=5.0.0
+redis==5.0.0
 
 # Export storage (S3)
-boto3>=1.34.0
+boto3==1.34.0
 
 # Image processing (EXIF stripping)
-pillow>=10.0.0
-reportlab>=4.4.0
+pillow==10.0.0
+reportlab==4.4.0
 
 # MFA/TOTP support
-pyotp>=2.9.0
-duo_universal>=2.2.0
+pyotp==2.9.0
+duo_universal==2.2.0
