refactor: migrate pytz to zoneinfo (Python 3.11 native)
- Replace pytz.timezone() with zoneinfo.ZoneInfo() in workflow_triggers.py
- Replace pytz==2024.1 with tzdata==2024.1 in requirements.txt
- tzdata provides timezone data for containers without system tzdata

SlowAPI kept as-is:
- Already supports Redis for horizontal scaling
- Built on mature 'limits' library
- No benefit to switching; edge-layer rate limiting is better upgrade path

All 267 tests passing.

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -45,8 +45,8 @@ slowapi==0.1.9
 # Error tracking (optional)
 sentry-sdk[fastapi]==1.40.0
 
-# Timezone support
-pytz==2024.1
+# Timezone support (for containers without system tzdata)
+tzdata==2024.1
 
 # Rate limiting (distributed storage for multi-worker setups)
 redis==5.0.0
