feat: add gcp monitoring and health probes

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -139,12 +139,25 @@ INTERNAL_SECRET=
 SENTRY_DSN=
 
 # =============================================================================
+# GCP MONITORING (Cloud Logging + Error Reporting)
+# =============================================================================
+# Set to 0 to disable GCP monitoring
+GCP_MONITORING_ENABLED=1
+# Optional override (Cloud Run sets GOOGLE_CLOUD_PROJECT automatically)
+GCP_PROJECT_ID=
+# Service name shown in Error Reporting
+GCP_SERVICE_NAME=crm-api
+# 0.0 - 1.0 sampling rate for error reporting
+GCP_ERROR_REPORTING_SAMPLE_RATE=1.0
+
+# =============================================================================
 # RATE LIMITING
 # =============================================================================
 # Requests per minute per IP (defaults shown)
 # RATE_LIMIT_AUTH=5       # Login attempts
-# RATE_LIMIT_WEBHOOK=100  # Meta webhooks  
+# RATE_LIMIT_WEBHOOK=100  # Meta webhooks
 # RATE_LIMIT_API=60       # General API
+# RATE_LIMIT_SEARCH=30    # Global search
 
 # =============================================================================
 # EMAIL PROVIDER (Resend)
