feat: add form builder backend flow

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -158,6 +158,7 @@ GCP_ERROR_REPORTING_SAMPLE_RATE=1.0
 # RATE_LIMIT_WEBHOOK=100  # Meta webhooks
 # RATE_LIMIT_API=60       # General API
 # RATE_LIMIT_SEARCH=30    # Global search
+# RATE_LIMIT_PUBLIC_FORMS=10  # Public form submissions
 
 # =============================================================================
 # EMAIL PROVIDER (Resend)
