Harden security, compliance, and observability

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -35,6 +35,14 @@ GOOGLE_REDIRECT_URI=http://localhost:8000/auth/google/callback
 # Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
 FERNET_KEY=
 
+# Used for encrypting PII fields (cases/intended parents)
+# Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+DATA_ENCRYPTION_KEY=
+
+# HMAC key for deterministic PII hashes (email/phone)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+PII_HASH_KEY=
+
 # Used for encrypting version snapshots (pipelines/templates/settings/etc)
 # If empty, the app falls back to META_ENCRYPTION_KEY.
 VERSION_ENCRYPTION_KEY=
@@ -159,6 +167,35 @@ GCP_ERROR_REPORTING_SAMPLE_RATE=1.0
 # RATE_LIMIT_API=60       # General API
 # RATE_LIMIT_SEARCH=30    # Global search
 # RATE_LIMIT_PUBLIC_FORMS=10  # Public form submissions
+
+# =============================================================================
+# ANALYTICS CACHE
+# =============================================================================
+# Cache TTL for analytics snapshots (seconds)
+ANALYTICS_CACHE_TTL_SECONDS=300
+
+# =============================================================================
+# OBSERVABILITY (OpenTelemetry)
+# =============================================================================
+# Enable OpenTelemetry tracing when OTLP endpoint is configured
+OTEL_ENABLED=false
+OTEL_SERVICE_NAME=crm-api
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_EXPORTER_OTLP_HEADERS=
+OTEL_SAMPLE_RATE=0.1
+
+# =============================================================================
+# SLO DEFAULTS (Core Workflows)
+# =============================================================================
+SLO_SUCCESS_RATE=0.99
+SLO_AVG_LATENCY_MS=500
+SLO_WINDOW_MINUTES=60
+
+# =============================================================================
+# COMPLIANCE / RETENTION
+# =============================================================================
+# Default retention window for purgeable entities (days)
+DEFAULT_RETENTION_DAYS=2190
 
 # =============================================================================
 # EMAIL PROVIDER (Resend)
