--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -7,6 +7,8 @@ env =
     # Fernet keys for version snapshot encryption in tests
     D:VERSION_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
     D:META_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
+    D:DATA_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
+    D:PII_HASH_KEY=test-pii-hash-key-please-change
     # Default only; CI supplies its own DATABASE_URL (e.g. crm_test)
     D:DATABASE_URL=postgresql+psycopg://postgres:postgres@localhost:5432/crm
 testpaths = tests
