--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       # Fernet keys must be 32 url-safe base64-encoded bytes.
       VERSION_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
       META_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
+      DATA_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
+      PII_HASH_KEY: "test-pii-hash-key-please-change"
       DEV_BYPASS_AUTH: "False"
       ENV: test
 
@@ -127,3 +129,91 @@ jobs:
         run: |
           pnpm install
           pnpm run typecheck
+
+  security-scans:
+    name: Security Scans
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: crm_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres -d crm_test"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgresql+psycopg://postgres:postgres@localhost:5432/crm_test
+      JWT_SECRET: test-secret-key-for-ci
+      VERSION_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
+      META_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
+      DATA_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
+      PII_HASH_KEY: "test-pii-hash-key-please-change"
+      DEV_BYPASS_AUTH: "True"
+      ENV: test
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Python dependencies
+        working-directory: apps/api
+        run: |
+          pip install -r requirements.txt
+          pip install -r test-requirements.txt
+          pip install bandit pip-audit
+
+      - name: Run bandit (SAST)
+        working-directory: apps/api
+        run: bandit -r app -ll
+
+      - name: Run pip-audit (Dependency Scan)
+        working-directory: apps/api
+        run: pip-audit -r requirements.txt -r test-requirements.txt
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 10.25.0
+
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '24'
+          cache: 'pnpm'
+          cache-dependency-path: apps/web/pnpm-lock.yaml
+
+      - name: Install frontend dependencies
+        working-directory: apps/web
+        run: pnpm install
+
+      - name: Run pnpm audit (Dependency Scan)
+        working-directory: apps/web
+        run: pnpm audit --audit-level=high
+
+      - name: Run migrations
+        working-directory: apps/api
+        run: alembic upgrade head
+
+      - name: Start API server
+        working-directory: apps/api
+        run: |
+          PYTHONPATH=. uvicorn app.main:app --host 0.0.0.0 --port 8000 &
+          echo $! > /tmp/uvicorn.pid
+          sleep 5
+
+      - name: OWASP ZAP baseline (DAST)
+        uses: zaproxy/action-baseline@v0.12.0
+        with:
+          target: 'http://localhost:8000/openapi.json'
