ci: use GitHub secrets for PII encryption keys

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
       # Fernet keys must be 32 url-safe base64-encoded bytes.
       VERSION_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
       META_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
-      DATA_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
-      PII_HASH_KEY: "test-pii-hash-key-please-change"
+      DATA_ENCRYPTION_KEY: ${{ secrets.DATA_ENCRYPTION_KEY || '_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=' }}
+      PII_HASH_KEY: ${{ secrets.PII_HASH_KEY || 'test-pii-hash-key-please-change' }}
       DEV_BYPASS_AUTH: "False"
       ENV: test
 
@@ -154,8 +154,8 @@ jobs:
       JWT_SECRET: test-secret-key-for-ci
       VERSION_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
       META_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
-      DATA_ENCRYPTION_KEY: "_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E="
-      PII_HASH_KEY: "test-pii-hash-key-please-change"
+      DATA_ENCRYPTION_KEY: ${{ secrets.DATA_ENCRYPTION_KEY || '_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=' }}
+      PII_HASH_KEY: ${{ secrets.PII_HASH_KEY || 'test-pii-hash-key-please-change' }}
       DEV_BYPASS_AUTH: "True"
       ENV: test
 
