feat: Add Profile Card with inline editing, sync, hidden fields, and PDF export
Backend:
- Add CaseProfileOverride, CaseProfileState, CaseProfileHiddenField models
- Add profile_service with get/sync/save/hide operations
- Add profile router with GET/POST/PUT endpoints
- Add pdf_export_service using Playwright for rendering
- Add export endpoints for submissions and profiles
- Add FORM_SUBMISSION_RECEIVED notification type
- Add APPLICATION_EDITED, PROFILE_EDITED, PROFILE_HIDDEN activity types
- Install Playwright + Chromium in Dockerfile

Frontend:
- Add CaseProfileCard component with edit mode UX
- Add reveal (temporary) vs hide (persistent) field toggles
- Add sync button to pull from latest submission
- Add Export button for PDF download
- Add inline editing to CaseApplicationTab
- Add Profile tab (case_manager+ only)
- Add profile.ts API + use-profile.ts hooks

Tests:
- Add test_profile.py for sync/hidden behavior
- Update test_forms.py for submission answer updates

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -40,6 +40,11 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
+ENV PLAYWRIGHT_BROWSERS_PATH=/opt/playwright
+
+# Install Playwright browser binaries (required for PDF export)
+RUN python -m playwright install --with-deps chromium && \
+    chmod -R 755 /opt/playwright
 
 # Create non-root user
 RUN useradd --create-home --shell /bin/bash appuser
