--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -27,7 +27,7 @@ python-multipart==0.0.20
 httpx==0.27.0
 pyjwt==2.8.0
 google-auth==2.29.0
-requests==2.31.0
+requests==2.32.4
 email-validator==2.0.0
 
 # Security
@@ -37,13 +37,13 @@ nh3==0.2.0
 resend==2.0.0
 
 # Encryption (for Meta page tokens)
-cryptography==43.0.0
+cryptography==44.0.1
 
 # Rate limiting
 slowapi==0.1.9
 
 # Error tracking (optional)
-sentry-sdk[fastapi]==1.40.0
+sentry-sdk[fastapi]==1.45.1
 google-cloud-logging==3.10.0
 google-cloud-error-reporting==1.9.1
 
@@ -73,3 +73,4 @@ reportlab==4.4.0
 # MFA/TOTP support
 pyotp==2.9.0
 duo_universal==2.2.0
+playwright==1.49.1
