feat(workflow): Add workflow approval system with business hours
Backend:
- Added workflow approval task type and related enums
- Implemented business hours calculator (48 business hours timeout)
- Added workflow action preview and payload rendering
- Created approval task service with resolve/deny/expire flow
- Added owner change invalidation for pending approvals
- Implemented approval expiry sweep job
- Fixed indentation error in workflow_engine.py

Frontend:
- Added ApprovalStatusBadge and ApprovalTaskActions components
- Updated tasks page to handle approval tasks
- Added workflow approval types and API hooks
- Excluded approval tasks from regular task counts

Tests:
- Added comprehensive workflow approval tests (23 passing)

Migration: h1b2c3d4e5f6

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -59,6 +59,7 @@ opentelemetry-instrumentation-sqlalchemy==0.48b0
 
 # Timezone support (for containers without system tzdata)
 tzdata==2024.1
+holidays>=0.40
 
 # Rate limiting (distributed storage for multi-worker setups)
 redis==5.0.0
