--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -213,7 +213,27 @@ jobs:
           echo $! > /tmp/uvicorn.pid
           sleep 5
 
+      - name: Seed dev user for ZAP auth bypass
+        run: |
+          psql "$DATABASE_URL" <<'SQL'
+          INSERT INTO organizations (id, name, slug, created_at, updated_at)
+          VALUES ('00000000-0000-0000-0000-000000000001', 'Test Organization', 'test-org', now(), now())
+          ON CONFLICT (id) DO NOTHING;
+
+          INSERT INTO users (id, email, display_name, is_active, token_version, created_at, updated_at)
+          VALUES ('00000000-0000-0000-0000-000000000002', 'admin@test.com', 'Test Admin', true, 1, now(), now())
+          ON CONFLICT (id) DO NOTHING;
+
+          INSERT INTO memberships (id, user_id, organization_id, role, created_at)
+          VALUES ('00000000-0000-0000-0000-000000000003', '00000000-0000-0000-0000-000000000002', '00000000-0000-0000-0000-000000000001', 'admin', now())
+          ON CONFLICT (user_id) DO NOTHING;
+          SQL
+
+      - name: Allow ZAP to write workspace
+        run: chmod -R a+w "$GITHUB_WORKSPACE"
+
       - name: OWASP ZAP baseline (DAST)
         uses: zaproxy/action-baseline@v0.12.0
         with:
-          target: 'http://localhost:8000/openapi.json'
+          target: 'http://localhost:8000/health'
+          allow_issue_writing: false
