feat: Major settings refactor with sessions, signatures, and user profile
Backend:
- Added user_sessions table for session tracking/revocation
- Added user phone/title fields for email signatures
- Added org social links (JSONB) and disclaimer fields
- New session_service.py for session management
- WebSocket session revocation support
- Signature templates now support org social links and disclaimers
- Added render_signature_preview() for admin previews with sample data
- Fixed migration partial index issue (removed now() predicate)

Frontend:
- Refactored Settings page with tabs (General, Notifications, Email Signature)
- ProfileSection with avatar upload, phone, title
- ActiveSessionsSection with real session management
- OrganizationSection for company info
- SocialLinksSection for org social media links
- SignatureBrandingSection with disclaimer field
- SignaturePreviewSection for admin previews

Migrations:
- i1a2b3c4d5e6: Settings refactor (user sessions, phone/title, social links)
- c750cb72a8a6: Merge settings and notifications heads

Tests: 320 passed

--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -75,3 +75,6 @@ reportlab==4.4.0
 pyotp==2.9.0
 duo_universal==2.2.0
 playwright==1.49.1
+
+# Session tracking (user agent parsing)
+user-agents==2.2.0
