--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -239,4 +239,12 @@ jobs:
           target: 'http://localhost:8000/health'
           allow_issue_writing: false
           cmd_options: '-c zap-baseline.conf'
-          artifact_name: 'zap-scan-report-${{ github.run_id }}'
+          fail_action: false
+      
+      - name: Upload ZAP Report
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: zap-baseline-report
+          path: report_html.html
+          if-no-files-found: ignore
