--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -234,17 +234,19 @@ jobs:
         run: chmod -R a+w "$GITHUB_WORKSPACE"
 
       - name: OWASP ZAP baseline (DAST)
-        uses: zaproxy/action-baseline@v0.12.0
-        with:
-          target: 'http://localhost:8000/health'
-          allow_issue_writing: false
-          cmd_options: '-c zap-baseline.conf'
-          fail_action: false
+        run: |
+          docker run --rm --network host \
+            -v ${{ github.workspace }}:/zap/wrk:rw \
+            ghcr.io/zaproxy/zaproxy:stable \
+            zap-baseline.py -t http://localhost:8000/health \
+            -c zap-baseline.conf \
+            -r zap-report.html \
+            -I || true
       
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: zap-baseline-report
-          path: report_html.html
+          path: zap-report.html
           if-no-files-found: ignore
