--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -86,6 +86,11 @@
       "@types/react": "19.2.7",
       "@types/react-dom": "19.2.3",
       "d3-color": ">=3.1.0"
-    }
+    },
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "msw",
+      "sharp"
+    ]
   }
 }
