feat: membership soft-delete + dependency upgrades + lifespan
Membership Soft-Delete:
- Add is_active column to memberships table
- Migration: 20260112_1631_add_membership_is_active.py
- Update membership_service to filter by is_active
- Add deactivate/reactivate logic instead of hard delete
- Update auth_service, invite_service, notification_service
- Update analytics, workflow, and permission services

Backend Improvements:
- Config hardening: require ENV, encryption keys in prod
- Org-scoped queries in task_service.get_task_context()
- Update various routers: forms, integrations, profile, tasks

Infrastructure:
- Dependency upgrades in requirements.txt
- FastAPI lifespan handler (replaces deprecated on_event)
- Deploy workflow updates

--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -79,4 +79,5 @@ jobs:
             --image "${IMAGE}" \
             --region "${GCP_REGION}" \
             --platform managed \
+            --set-env-vars "ENV=production" \
             --quiet
