--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -26,7 +26,7 @@ python-multipart==0.0.20
 # Auth dependencies
 httpx==0.27.0
 pyjwt==2.8.0
-google-auth==2.29.0
+google-auth==2.37.0
 requests==2.32.4
 email-validator==2.0.0
 
@@ -44,18 +44,21 @@ slowapi==0.1.9
 
 # Error tracking (optional)
 sentry-sdk[fastapi]==1.45.1
-google-cloud-logging==3.10.0
-google-cloud-error-reporting==1.9.1
+google-cloud-logging==3.12.0
+google-cloud-error-reporting==1.12.0
 
 # Observability (OpenTelemetry)
-opentelemetry-api==1.27.0
-opentelemetry-sdk==1.27.0
-opentelemetry-exporter-otlp==1.27.0
-opentelemetry-instrumentation==0.48b0
-opentelemetry-instrumentation-fastapi==0.48b0
-opentelemetry-instrumentation-httpx==0.48b0
-opentelemetry-instrumentation-requests==0.48b0
-opentelemetry-instrumentation-sqlalchemy==0.48b0
+opentelemetry-api==1.29.0
+opentelemetry-sdk==1.29.0
+opentelemetry-exporter-otlp==1.29.0
+opentelemetry-instrumentation==0.50b0
+opentelemetry-instrumentation-fastapi==0.50b0
+opentelemetry-instrumentation-httpx==0.50b0
+opentelemetry-instrumentation-requests==0.50b0
+opentelemetry-instrumentation-sqlalchemy==0.50b0
+
+# Protobuf (avoid deprecated PyType_Spec usage warnings in Python 3.14+)
+protobuf==5.28.3
 
 # Timezone support (for containers without system tzdata)
 tzdata==2024.1
