chore: update tests, apply formatting, and update docs
Tests:
- Updated all backend tests to use /surrogates routes
- Updated frontend tests for surrogates rename
- Renamed test files: cases.test.tsx -> surrogates.test.tsx

Style:
- Applied ruff formatting across backend codebase

Docs:
- Updated CLAUDE.md version and role descriptions
- Updated README.md
- Moved agents.md to project root

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "gen:stages": "cd ../.. && apps/api/.venv/bin/python scripts/gen_stage_map.py",
+    "prebuild": "pnpm run gen:stages",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
