refactor: extract stage definitions and configure release-please
- Move stage rules to dedicated stage_definitions.py and stage_rules.py modules
- Configure bump-minor-pre-major for release-please
- Update pipeline and surrogate services to use new stage modules

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,7 +7,9 @@
       "extra-files": [
         "apps/api/app/core/config.py",
         "README.md"
-      ]
+      ],
+      "bump-minor-pre-major": true,
+      "bump-patch-for-minor-pre-major": true
     }
   }
 }
