--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "gen:stages": "cd ../.. && apps/api/.venv/bin/python scripts/gen_stage_map.py",
+    "gen:stages": "cd ../.. && python3 scripts/gen_stage_map.py",
     "prebuild": "pnpm run gen:stages",
     "build": "next build",
     "start": "next start",
