feat: enforce org-scoped lookups and cross-org isolation for AI/workflow actions
Tightened security across AI chat, status change requests, and workflow helpers
to prevent cross-organization data access.

## Security Improvements
- AI chat normalizes 'case' as surrogate alias with org-scoped context
- Status change request lookups enforce org isolation end-to-end
- AI action executors validate entity org before operations
- Workflow triggers refuse cross-org entity IDs

## Backend Changes
- apps/api/app/routers/ai.py: Normalize entity references
- apps/api/app/services/ai_chat_service.py: Org-scoped surrogate context
- apps/api/app/services/status_change_request_service.py: Org filtering
- apps/api/app/routers/status_change_requests.py: Org-scoped endpoints
- apps/api/app/services/ai_action_executor.py: Entity org validation
- apps/api/app/services/workflow_engine.py: Cross-org checks
- apps/api/app/services/workflow_triggers.py: Org isolation enforcement
- apps/api/app/core/deps.py: Simplified dependencies
- apps/api/app/routers/websocket.py: Refactored connections

## Frontend Changes
- apps/web/app/(app)/intended-parents/matches/page.tsx: Minor fixes
- apps/web/lib/auth-context.tsx: Simplified auth handling

## New Tests
- test_status_change_request_scoping.py: Cross-org request isolation
- test_ai_action_executor_scoping.py: AI action org validation
- test_workflow_trigger_scoping.py: Workflow trigger isolation
- test_ai_contract.py: Extended with cross-org scenarios

## Documentation
- CODEMAP.md, LAUNCH_READINESS.md, REVIEW.md: Updated readiness docs
- ENTERPRISE_GAPS.md, MODERNIZATION_AUDIT.md: Gap analysis

Tests: 341 backend + 96 frontend passed

--- a/apps/api/pytest.ini
+++ b/apps/api/pytest.ini
@@ -1,8 +1,8 @@
 [pytest]
+pythonpath = .
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 env =
-    D:DEV_BYPASS_AUTH=False
     D:ENV=test
     # Fernet keys for version snapshot encryption in tests
     D:VERSION_ENCRYPTION_KEY=_uKVT313or8juloqHLg9OtBNJv9LCBzEC6mJ1yG9S_E=
