feat: add Zoom and Google Meet integration for appointments
Appointment Meeting Modes:
- Add MeetingMode enum (none, zoom, google_meet, in_person)
- Support meeting_mode selection per appointment
- Auto-create Zoom/Google Meet links when scheduling

Zoom Integration:
- Add Zoom webhook handlers for meeting started/ended events
- Track meeting timestamps (meeting_started_at, meeting_ended_at)
- Validate webhook signatures with HMAC
- Dedupe webhook events via event_id

Google Meet Integration:
- Add calendar_service.py for Google Calendar API
- Create Google Meet links via Calendar events API
- Support Google OAuth token refresh

Backend:
- Migration 20260116_1500_add_zoom_google_meet_integration.py
- Update appointment schemas and services
- Add comprehensive appointment tests

Frontend:
- Update AppointmentSettings with meeting mode selector
- Show meeting links in AppointmentsList and UnifiedCalendar
- Update PublicBookingPage for meeting modes

Tests: 371 passing

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -53,6 +53,7 @@ VERSION_ENCRYPTION_KEY=
 ZOOM_CLIENT_ID=
 ZOOM_CLIENT_SECRET=
 ZOOM_REDIRECT_URI=http://localhost:8000/integrations/zoom/callback
+ZOOM_WEBHOOK_SECRET=  # Webhook verification token from Zoom app settings (for meeting.started/ended events)
 
 # Gmail integration OAuth (separate from Google Login OAuth)
 GMAIL_REDIRECT_URI=http://localhost:8000/integrations/gmail/callback
