--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -57,6 +57,7 @@ ZOOM_WEBHOOK_SECRET=  # Webhook verification token from Zoom app settings (for m
 
 # Gmail integration OAuth (separate from Google Login OAuth)
 GMAIL_REDIRECT_URI=http://localhost:8000/integrations/gmail/callback
+GOOGLE_CALENDAR_REDIRECT_URI=http://localhost:8000/integrations/google-calendar/callback
 
 # =============================================================================
 # Domain Restriction (optional)
